--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -24,6 +24,9 @@
         <ion-item menu-close href="#/app/settings">
           Settings
         </ion-item>
+        <ion-item menu-close href="#/app/aboutus">
+          About Us
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
